// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Item default 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 "
  >
    Item
  </div>
</div>
`;

exports[`Storyshots Molecules/Item props right 1`] = `
.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 "
  >
    Item
  </div>
  <div
    className=""
  >
    <p>
      Right
    </p>
  </div>
</div>
`;

exports[`Storyshots Molecules/Item props right is ArrowButton 1`] = `
.c4 {
  margin: 0;
  padding: 0;
  border: 0;
  background: none;
  font-size: 100%;
  vertical-align: baseline;
  font-family: inherit;
  font-weight: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c4:hover {
  cursor: pointer;
}

.c4:focus {
  outline: 0;
}

.c1 {
  display: inline-block;
  margin: 0.1em;
  box-sizing: border-box;
}

.c1 > svg {
  width: 24px;
  height: 24px;
}

.c3 {
  display: block;
  line-height: 0;
  -webkit-transform: scale(-1,1);
  -ms-transform: scale(-1,1);
  transform: scale(-1,1);
}

.c3 svg {
  width: 24px;
  height: 24px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 12px 16px;
  color: $gray-dark;
  min-height: 48px;
  background-color: #fff;
}

.c0 > * {
  margin: 2px;
}

.c0 > .c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <span
    className="c1"
    dangerouslySetInnerHTML={
      Object {
        "__html": Object {
          "default": "test-file-stub",
        },
      }
    }
    name="add"
    size="24px"
  />
  <div
    className="c2 "
  >
    Item
  </div>
  <div
    className=""
  >
    <button
      className="c3 c4"
      onClick={[Function]}
    >
      <span
        className="c1"
        dangerouslySetInnerHTML={
          Object {
            "__html": Object {
              "default": "test-file-stub",
            },
          }
        }
        name="arrow"
        size="24px"
      />
    </button>
  </div>
</div>
`;
